# FreeCAD_sf_master

./: CMakeLists.txt
src/Gui/: CMakeLists.txt  SoFCDB.cpp  View3DInventorViewer.cpp  ViewProviderAnnotation.cpp  ViewProviderAnnotation.h  ViewProviderMeasureDistance.cpp
src/Gui/Inventor/base/: SbUTFString.cpp  SbUTFString.h  UTFString.cpp  UTFString.h
src/Gui/Inventor/fields/: SoMFUTFString.cpp  SoMFUTFString.h  SoSFUTFString.cpp  SoSFUTFString.h
src/Gui/Inventor/nodes/: SoUTFText.cpp  SoUTFText.h
src/Mod/: CMakeLists.txt
src/Mod/Cam2/: .directory  CMakeLists.txt  Init.py  InitGui.py
src/Mod/Cam2/App/: AppCam.cpp  AppCamPy.cpp  CMakeLists.txt  CamFeature.cpp  CamFeature.h  CamPartsList.cpp  CamPartsList.h  Feature.cpp  Feature.h  GCode.cpp  GCode.h  GCodeFeature.cpp  GCodeFeature.h  PreCompiled.cpp  PreCompiled.h  PyCam.py  StockGeometry.cpp  StockGeometry.h  Support.cpp  Support.h  TPGFeature.cpp  TPGFeature.h  TPGList.cpp  TPGList.h  ToolpathFormatter.py  __init__.py
src/Mod/Cam2/App/Libs/: CMakeLists.txt
src/Mod/Cam2/App/Libs/libarea-clipper/: Arc.cpp  Arc.h  Area.cpp  Area.h  AreaDxf.cpp  AreaDxf.h  AreaOrderer.cpp  AreaOrderer.h  AreaPocket.cpp  Box.h  CMakeLists.txt  Circle.cpp  Circle.h  Curve.cpp  Curve.h  Point.h  PythonStuff.cpp  PythonStuff.h  README  dxf.cpp  dxf.h
src/Mod/Cam2/App/Libs/libarea-clipper/kurve/: COPYING  Construction.cpp  Finite.cpp  Matrix.cpp  geometry.h  kurve.cpp  offset.cpp
src/Mod/Cam2/App/Plugins/: CMakeLists.txt  MyPlugin.cpp  MyPlugin.h
src/Mod/Cam2/App/Plugins/TestPlugin/: CMakeLists.txt  CppExampleTPG.cpp  CppExampleTPG.h
src/Mod/Cam2/App/PyTPG/: ExampleTPG.py  README.md  __init__.py
src/Mod/Cam2/App/PyTPG/ExampleTPG/: ExampleTPG.py  __init__.py
src/Mod/Cam2/App/TPG/: CppTPG.h  CppTPGDescriptor.cpp  CppTPGDescriptor.h  CppTPGDescriptorWrapper.cpp  CppTPGDescriptorWrapper.h  CppTPGFactory.cpp  CppTPGFactory.h  CppTPGPlugin.cpp  CppTPGPlugin.h  CppTPGWrapper.cpp  CppTPGWrapper.h  PyTPGDescriptor.cpp  PyTPGDescriptor.h  PyTPGFactory.cpp  PyTPGFactory.h  PyTPGManager.cpp  PyTPGManager.h  TPG.cpp  TPG.h  TPGCache.cpp  TPGCache.h  TPGFactory.cpp  TPGFactory.h  TPGLib.cpp  TPGLib.h  TPGProcess.cpp  TPGProcess.h  TPGPython.cpp  TPGPython.h  TPGSettings.cpp  TPGSettings.h
src/Mod/Cam2/Gui/: AppCamGui.cpp  CMakeLists.txt  CamProjectDockWindow.cpp  CamProjectDockWindow.h  CamProjectDockWindow.ui  CamSettingsDockWindow.cpp  CamSettingsDockWindow.h  CamSettingsDockWindow.ui  Command.cpp  TPGLibraryDockWindow.cpp  TPGLibraryDockWindow.h  TPGLibraryDockWindow.ui  TPGListModel.cpp  TPGListModel.h  ToolPathDockWindow.cpp  ToolPathDockWindow.h  UIManager.cpp  UIManager.h  ViewProvider.cpp  ViewProvider.h  ViewProviderCamFeature.cpp  ViewProviderCamFeature.h  ViewProviderCamPartsList.cpp  ViewProviderCamPartsList.h  ViewProviderGCodeFeature.cpp  ViewProviderGCodeFeature.h  ViewProviderStockGeometry.cpp  ViewProviderStockGeometry.h  ViewProviderTPGFeature.cpp  ViewProviderTPGFeature.h  ViewProviderTPGList.cpp  ViewProviderTPGList.h  Workbench.cpp  Workbench.h
src/Mod/Cam2/Gui/Resources/: Cam.qrc
src/Mod/Cam2/Gui/Resources/icons/: cross.xcf  diverge.xcf  export.xcf  run.xcf  tick.xcf
src/Mod/Cam2/Gui/TaskDialog/: TaskDlgEditCamFeature.cpp  TaskDlgEditCamFeature.h  TaskDlgEditCamPartsList.cpp  TaskDlgEditCamPartsList.h  TaskDlgEditStockGeometry.cpp  TaskDlgEditStockGeometry.h  TaskDlgEditTPGFeature.cpp  TaskDlgEditTPGFeature.h
src/Mod/Cam2/Plugins/Profiling/: Profiling.tpg
src/Mod/Raytracing/App/: LibraryMaterial.cpp  RenderProcess.h
src/Mod/Raytracing/Gui/: TaskDlgRender.cpp
src/Mod/Sketcher/Gui/: CommandCreateGeo.cpp  SoDatumLabel.cpp  SoDatumLabel.h  ViewProviderSketch.cpp
